Document analytics UI upgrades
